# ug_stereomatcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  package.xml  params.json
calibrations/: calL.xml  calR.xml
include/ug_stereomatcher/: settings.h  ug_stereomatcher.h
launch/: stereo_nodes.launch  stereo_nodes_foveated.launch
msg/: CamerasSync.msg  foveatedstack.msg
src/disparitymaps_viz/: RH_FdispImgTest.cpp  RH_dispImgTest.cpp  UG_FdispImgTest.cpp  UG_dispImgTest.cpp
src/gpu_matcher/: MatchGPULib.cpp  MatchGPULib.h  MatchLib.cu  MatchLib_common.h  UG_GPU_matcher.cpp  convolutionSeparable_gold.cpp  leak_detector.h  matcher.py  whereIam.py
src/pointcloud/: getPointCloud.cpp
src/publish_images/: input_images.xml  publish_images.cpp
src/utils/: input_images.xml  publish_images.cpp
srv/: GetDisparitiesGPU.srv
