<?xml version="1.0"?>
<package>
  <name>ug_stereomatcher</name>
  <version>1.0.0</version>
  <description>The ug_stereomatcher ROS package consists of the University of Glasgow GPU stereo matcher, a node to compute point clouds from disparity maps, disparity maps display and a node to simulate stereo capture</description>
  
  <author email="t.xu.1@research.gla.ac.uk">Tian Xu</author>  
  <author email="William.Cockshott@glasgow.ac.uk">Paul Cockshott</author> 
  <author email="ger.ac83@gmail.com">Gerardo Aragon-Camarasa</author>  
  <author email="mozhgan.kabiri@gmail.com">Mozhgan Chimeh</author>
  <author email="Paul.Siebert@glasgow.ac.uk">J. Paul Siebert</author>
  <author>Susanne Oehler</author>

  <maintainer email="ger.ac83@gmail.com">Gerardo Aragon-Camarasa</maintainer>  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>stereo_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>stereo_msgs</run_depend>

</package>
